# docs/swagger.json
@@ -20,7 +20,7 @@
     "host": "wikipedia.youssefsobhy.com",
     "basePath": "/",
     "paths": {
-        "/api": {
+        "/api/v1": {
             "get": {
                 "description": "Check if the API is operational.",
                 "consumes": [
@@ -46,7 +46,7 @@
                 }
             }
         },
-        "/api/search": {
+        "/api/v1/search": {
             "get": {
                 "description": "Search for a short description of a person, place, or thing.",
                 "consumes": [
